Challenge 9 and flask

--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -106,12 +106,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create our session (link) from Python to the DB\n",
     "session = Session(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x10ebb409488>,\n",
+       " 'station': 'USC00519397',\n",
+       " 'prcp': 0.08,\n",
+       " 'date': '2010-01-01',\n",
+       " 'id': 1,\n",
+       " 'tobs': 65.0}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_row = session.query(Measurement).first()\n",
+    "first_row.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x10ebb433b08>,\n",
+       " 'name': 'WAIKIKI 717.2, HI US',\n",
+       " 'id': 1,\n",
+       " 'longitude': -157.8168,\n",
+       " 'elevation': 3.0,\n",
+       " 'station': 'USC00519397',\n",
+       " 'latitude': 21.2716}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_row = session.query(Station).first()\n",
+    "first_row.__dict__"
    ]
   },
   {
@@ -123,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x29880d06308>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x10eb8f9fd48>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -169,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +298,7 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +319,7 @@
        "[(9)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +348,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +371,7 @@
        "[(54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -361,12 +414,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(71.0, 77.21989528795811, 83.0)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
-    "# and return the minimum, average, and maximum temperatures for that range of dates\n"
+    "# and return the minimum, average, and maximum temperatures for that range of dates\n",
+    "def calc_temps(start_date, end_date):\n",
+    "    sel = [func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)]           \n",
+    "\n",
+    "    return session.query(*sel).\\\n",
+    "    filter(Measurement.date >= start_date).\\\n",
+    "    filter(Measurement.date <= end_date).all()\n",
+    "\n",
+    "print(calc_temps('2017-06-01', '2017-06-30'))"
    ]
   },
   {
@@ -378,10 +447,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(64.0, 85.0, 74.94411764705882)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sqlalchemy import extract\n",
+    "# Determine key statistical data about the month of June\n",
+    "session.query(func.min(Measurement.tobs), func.max(Measurement.tobs), func.avg(Measurement.tobs)).\\\n",
+    "filter(extract('month', Measurement.date)==6).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1700.000000\n",
+       "mean       74.944118\n",
+       "std         3.257417\n",
+       "min        64.000000\n",
+       "25%        73.000000\n",
+       "50%        75.000000\n",
+       "75%        77.000000\n",
+       "max        85.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Determine key statistical data about the month of June using describe()\n",
+    "results = session.query(Measurement.tobs).\\\n",
+    "filter(extract('month', Measurement.date)==6).all()\n",
+    "series_june = pd.Series((i[0] for i in results))\n",
+    "series_june.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1700.000000\n",
+       "mean       74.944118\n",
+       "std         3.257417\n",
+       "min        64.000000\n",
+       "25%        73.000000\n",
+       "50%        75.000000\n",
+       "75%        77.000000\n",
+       "max        85.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series((i[0] for i in (session.query(Measurement.tobs).\\\n",
+    "filter(extract('month', Measurement.date)==6).all()))).describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(56.0, 83.0, 71.04152933421226)]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Determine key statistical data about the month of December\n",
+    "session.query(func.min(Measurement.tobs), func.max(Measurement.tobs), func.avg(Measurement.tobs)).\\\n",
+    "filter(extract('month', Measurement.date)==12).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1517.000000\n",
+       "mean       71.041529\n",
+       "std         3.745920\n",
+       "min        56.000000\n",
+       "25%        69.000000\n",
+       "50%        71.000000\n",
+       "75%        74.000000\n",
+       "max        83.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Determine key statistical data about the month of December using describe()\n",
+    "results = session.query(Measurement.tobs).\\\n",
+    "filter(extract('month', Measurement.date)==12).all()\n",
+    "series_dec = pd.Series((i[0] for i in results))\n",
+    "series_dec.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1517.000000\n",
+       "mean       71.041529\n",
+       "std         3.745920\n",
+       "min        56.000000\n",
+       "25%        69.000000\n",
+       "50%        71.000000\n",
+       "75%        74.000000\n",
+       "max        83.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series((i[0] for i in (session.query(Measurement.tobs).\\\n",
+    "filter(extract('month', Measurement.date)==12).all()))).describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Findings\n",
+    "# In general December has lower temperatures comparing with June.\n",
+    "# In December the average temperature (71) is almost 4 degrees F less than in June (74.94)\n",
+    "# The minimum temperature in Dec is 56F and in June is 64F.\n",
+    "# The maximun temperature in Dec is 83F and in June is 85F.\n",
+    "# The total rows taking for the statistics for Dec was 1517 and for June was 1700.\n",
+    "# The percentiles for Dec are 75% is 74, 50% is 71 and 25% is 69.  \n",
+    "# The percentiles for June are 75% is 77, 50% is 75 and 25% is 73. \n",
+    "# I will say the weather is great whole year."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recommendations\n",
+    "# We can make the statistics by stations and compare to know if there is any difference in temperature by stations.\n",
+    "# Also doing the statistics for precipitation could be good, because seems there are some zones where raining could happen often.\n",
+    "# Since the location for each station is provided will be easier to identify where are the better zones based on temperature and precipitation.\n",
+    "# We can find the statistics for temperature and precipitation by year and evaluate how much the weather has change during those years, also we can filter by station."
+   ]
   }
  ],
  "metadata": {
@@ -400,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
